<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.moreawesome.hugo.referral.PetActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabpet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_done_white_24px"/>

    <ScrollView
        android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            tools:context="co.moreawesome.hugo.referral.PetActivity"
            tools:showIn="@layout/activity_pet">

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75">



                    <EditText android:id="@+id/patientname"
                              android:layout_weight="1"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:maxLines="1"
                              android:inputType="textCapSentences"
                              android:hint="Naam"/>

                    <TextView
                        android:id="@+id/lbl_patientname"
                        android:text="Vul de naam van de patient in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75">



                <EditText android:id="@+id/patienttype"
                          android:layout_weight="1"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:maxLines="1"
                          android:inputType="textCapSentences"
                          android:hint="Diersoort"/>

                <TextView
                    android:id="@+id/lbl_patienttype"
                    android:text=" Is het een hond, kat,...?"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"/>


            </LinearLayout>

        </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75">


                    <EditText android:id="@+id/patientrace"
                              android:layout_weight="1"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textCapSentences"
                              android:maxLines="1"
                              android:hint="Ras"/>

                    <TextView
                        android:id="@+id/lbl_patientrace"
                        android:text="Vul het ras in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75">


                    <EditText android:id="@+id/patientdob"
                              android:layout_weight="1"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="text"
                              android:maxLines="1"
                              android:hint="Geboortedatum"/>

                    <TextView
                        android:id="@+id/lbl_patientdob"
                        android:text="Vul de geboortedatum in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75">

                    <TextView
                        android:text="@string/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"/>

                    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                        <RadioButton
                            android:text="@string/gender_m"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio_m"
                            android:layout_weight="1"
                            android:onClick="onRadioButtonClicked"/>

                        <RadioButton
                            android:text="@string/gender_mg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio_mg"
                            android:layout_weight="1"
                            android:onClick="onRadioButtonClicked"/>

                        <RadioButton
                            android:text="@string/gender_v"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio_v"
                            android:layout_weight="1"
                            android:onClick="onRadioButtonClicked"/>

                        <RadioButton
                            android:text="@string/gender_vg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio_vg"
                            android:layout_weight="1"
                            android:onClick="onRadioButtonClicked"/>

                        <RadioButton
                            android:text="@string/gender_o"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio_o"
                            android:layout_weight="1"
                            android:onClick="onRadioButtonClicked"/>

                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>

